CMS: group chat and file transfer refactoring
- Process outgoing IMDN to update timestamp when the message or file transfer was displayed.
- IMAP stack: update folder selection even when SELECT CONDSTORE is performed.
- Add integration tests for:
	- RCS chat message (one to one and group).
	- RCS file transfer (one to one and group).
	- IMAP CPM session.
	- IMAP Group state.
	- IMAP IMDN.
- IMAP Group state messages are identified by their respective message ID.
   Chat ID is saved in CMS local storage to allow multiple group state events.
- Check that group chat is persisted before inserting group file transfer.
- For CPIM message, only perform parsing of body if message is fully retrieved from CMS.
- Remove unnecessary generic exception catching.